[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.8.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
config = "0.14.0"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]
