[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.9.1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.19.0"
tracing-actix-web = "0.7.11"
unicode-segmentation = "1.11.0"
validator = "0.18.1"

[dev-dependencies]
claims = "0.7.1"
reqwest = "0.12.5"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]
